# pam-gnupg

./: .gitignore  Makefile  README.md  autogen.sh  configure.ac  pam_gnupg.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: Makefile.am  helper.c  lib.h  pam_gnupg.c
